Cleaned up css, Reworked Form
Responsive Design and Regex Pattern in Form

--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
                 </select>
                 <input type="submit" value="Auswahl Löschen">
                 <input type="submit" value="Alle Löschen">
-                <input type="text" name="Name" value="Name">
-                <input type="text" name="Adresse" value="Adresse">
-                <input type="text" name="PLZ" value="PLZ">  
+                <input type="text" name="Name" value="" placeholder="Name" pattern="((([A-Z])\w+)([ ]*))+">
+                <input type="text" name="Adresse" value="" placeholder="Adresse">
+                <input type="text" name="PLZ" value="" placeholder="PLZ" pattern="\b\d{5}\b">  
                 <input type="submit" value="Bestellen">    
           </form>
             
