--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <!-- <div class="cookiebar open">
         <div class="left">Zur optimalen Nutzererfahrung nutzen wir auf unserer Website Cookies. 🍪 <a href="datenschutz.html">Mehr Informationen</a></div>
-        <div class="right"><button class="cookiebar-close" onclick="cookieClose()">Verstanden!</button></div>
+        <div class="right"><button class="cookiebar-close">Verstanden!</button></div>
       </div> -->
   </body>
 </html>
