Hook Test 2: Elektrisch Boogaloo

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       <!-- <div class="cookiebar open">
         <div class="left">Zur optimalen Nutzererfahrung nutzen wir auf unserer Website Cookies. 🍪 <a href="datenschutz.html">Mehr Informationen</a></div>
         <div class="right"><button class="cookiebar-close">Verstanden!</button></div>
+      ich raste so aus mit dem hook alla
       </div> -->
   </body>
 </html>
