--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=/php/Bestellung.php" />
+<meta http-equiv="refresh" content="0; url=/php/bestellung.php" />
